Oct18: review 2 edits

--- a/journal/201810.md
+++ b/journal/201810.md
@@ -2,9 +2,9 @@
 
 ![{alt text}](../img/{file.jpg} "{hover text}")
 
-Big news of the month is the historical moment: Politeia mainnet launch. Congratulations to everyone and thanks to Politeia team for the countless hours of work.
+The big news of the month is the Politeia mainnet launch on October 16th, when decision-making power over the future direction of the project and Treasury funds were handed over to the stakeholder community. Congratulations to everyone and thanks to the Politeia team for the countless hours of work.
 
-@jy-p noted that Politeia's great power can be used to improve Decred, but could also lead to problems if used unwisely. To inform stakeholders, he shared his experiences as a custodian of the [Decred Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx). His [blog post](https://blog.decred.org/2018/10/15/Politeia-in-Production/) is highly recommended for stakeholders for all the insights it contains.
+In a [blog post](https://blog.decred.org/2018/10/15/Politeia-in-Production/) to mark the occasion, @jy-p shared some insights from his experiences as a custodian of the [Decred Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx). He expressed optimism and interest in seeing what the Decred community would do with this power, but also cautioned about some pitfalls to be avoided and ways in which this grand governance experiment could go wrong.
 
 New software version 1.3.1 was released to allow everyone to participate in Politeia. It adds Governance page to Decredition for GUI users, and introduces a new `politeiavoter` tool for CLI users. Get the downloads on [GitHub](https://github.com/decred/decred-binaries/releases/tag/v1.3.1) and don't forget to [verify signatures](https://github.com/decred/decred-binaries/blob/v1.3.1/README.md#verifying-binaries).
 
@@ -35,7 +35,7 @@ Up next is adding notifications and other missing features. Longer term plan is 
 
 [dcrdata](https://github.com/decred/dcrdata): work to speed up initial sync ([751](https://github.com/decred/dcrdata/pull/751), [754](https://github.com/decred/dcrdata/pull/754), [752](https://github.com/decred/dcrdata/issues/752)), [disapproved blocks](https://github.com/decred/dcrdata/pull/733) page, Insight API [documentation](https://github.com/decred/dcrdata/pull/719) by @s_ben, new visual blocks [home page](https://github.com/decred/dcrdata/pull/718) by @itswisdomagain, time grouped [block listing](https://github.com/decred/dcrdata/pull/779). The newly merged features will be deployed in future releases.
 
-Trezor: Decred support was [merged](https://github.com/trezor/trezor-core/pull/358) into Model T firmware repository. Decrediton integration can be merged after the next firmware release. This is all for normal transactions. Buying tickets requires more work and changes to dcrwallet.
+Trezor: Decred support was [merged](https://github.com/trezor/trezor-core/pull/358) into Model T firmware repository. Decrediton integration can be merged after the next firmware release. This is all for normal transactions. Buying tickets will require more work and changes to dcrwallet.
 
 [Ticket splitting](https://github.com/matheusd/dcr-split-ticket-matcher): v0.6.2 released, the downloads and release notes are [on GitHub](https://github.com/matheusd/dcr-split-ticket-matcher/releases/tag/v0.6.2). On the master branch OpenBSD support was added among a few internal improvements.
 
@@ -55,7 +55,7 @@ Dev activity stats for October: 310 active PRs, 297 master commits, 65K added an
 
 ## People
 
-Welcome the new contractor company: [Block 42](http://42block.io/). They have been contributing to development and design for some time, and now finally appeared [at decred.org](https://decred.org/contributors/).
+A warm welcome to the new contractor company: [Block 42](http://42block.io/). They have been contributing to development and design for some time, and now finally appeared [on decred.org](https://decred.org/contributors/).
 
 Another warm welcome to new people contributing for the first time: [SergeyMikhlevskiy](https://github.com/decred/dcrandroid/commits?author=SergeyMikhlevskiy) (dcrandroid), [ademuanthony](https://github.com/decred/dcrdata/commits?author=ademuanthony) and [buck54321](https://github.com/decred/dcrdata/commits?author=buck54321) (dcrdata), [ggoranov](https://github.com/decred/dcrd/commits?author=ggoranov) (dcrd), [gallexis](https://github.com/decred/dcrwallet/commits?author=gallexis) (dcrwallet), [ZeroASIC](https://github.com/decred/dcrweb/commits?author=ZeroASIC) (dcrweb), [szpasztor](https://github.com/decred/decrediton/commits?author=szpasztor) and [faelv](https://github.com/decred/decrediton/commits?author=faelv) (decrediton).
 
@@ -67,7 +67,7 @@ We had a total of 7 proposals on Politeia in October. The statuses as of Nov 9 t
 
 1\. [Decred Open Source Research](https://proposals.decred.org/proposals/c68bb790ba0843980bb9695de4628995e75e0d1f36c992951db49eca7b3b4bcd) submitted by @richardred on Oct 16.
 
-It aims to seek funding for open source research and will involve multiple contributors. $10,000 is requested as an initial budget for a few months.
+This proposal seeks funding for open source research and will be open to contributions from anyone with relevant skills who applies them productively to approved research projects. Discussion focused on the method of approving research projects and deciding which work is eligible for payment. $10,000 was requested as an initial budget for a few months.
 
 Status: Approved. Voting finished on Nov 5 with 90.2% Yes votes.
 
@@ -79,15 +79,15 @@ Status: Approved. Voting finished on Nov 5 with 94.1% Yes votes.
 
 3\. [Decred Contractor Clearance Process](https://proposals.decred.org/proposals/fa38a3593d9a3f6cb2478a24c25114f5097c572f6dadf24c78bb521ed10992a4) submitted by @jy-p on Oct 19.
 
-{wording can be improved} The proposal goes into detail on a method to handle adding new contractors, removal of contractors, contractor disputes and resolution. @jy-p suggested that it be based on existing contractors vouching for new contractors in their domain making decisions among the people who work in a given domain. Where that fails a dispute can be escalated to a contractor vote, wherein contractors would vote weighted by the number of hours they have billed in a given period of time. A Stakeholder vote would be a last resort to resolve a dispute. The estimated project cost is $25,000, for work on a system for tracking contractors within domains and who has vouched for who.
+The proposal describes a formal process for clearing new contractors to bill for their work on the project. It is motivated by the need to maintain high standards in the project's software development and other subdomains. Individual new contributors will have to be approved by 3 established contractors in the relevant subdomain before being cleared to bill for their work. DCCs can similarly be revoked with the agreement of 3 contractors within the domain. Disputes can be escalated to an all contractor vote, wherein each contractor would vote with a weight based on the amount of time they bill for on the project. The estimated project cost is $25,000, for work on a system for tracking contractors within domains and who has vouched for who.
 
-Status: Author has not yet authorized the voting.
+Status: Author has not yet authorized the start of voting.
 
 4\. [Testing of the funding-request mechanism by a non expert](https://proposals.decred.org/proposals/3575a65bbc3616c939acf6edf801e1168485dc864efef910034268f695351b5d) submitted by hashfunction8 on Oct 20
 
 Author is asking for 0.1 DCR to reimburse their proposal fee, in exchange they would document how to use the proposal submission form.
 
-Status: Author has not yet authorized the voting.
+Status: Author has not yet authorized the start of voting.
 
 Two professional PR companies submitted proposals to provide communications services for Decred, both proposals had multiple revisions based on community feedback.
 
@@ -107,11 +107,11 @@ Status: Approved. Voting finished on Nov 5 with 62.3% Yes votes.
 
 Easyrabbit has already listed DCR and is offering a "premium listing" for 30 DCR - with promotions like no/low trading fees and feature placement on the site and in social media.
 
-Status: Author has not yet authorized the voting.
+Status: Author has not yet authorized the start of voting.
 
 A draft of bug bounty proposal was posted [on Reddit](https://www.reddit.com/r/decred/comments/9sri0b/bug_bounty_politeia_funding_proposal/) for discussion.
 
-The montly format of Decred Journal is not well suited for timely getting informed about proposal activity on Politeia. To address this need, @richardred started weekly [Politeia Digest](https://github.com/RichardRed0x/politeia-digest). It covers all proposals that were added or changed within a week, and provides some analysis. [Issue 1](https://www.reddit.com/r/decred/comments/9qnye8/politeia_digest_issue_1_a_short_weekly_update_on/) and [Issue 2](https://www.reddit.com/r/decred/comments/9sruhn/politeia_digest_2_oct_2330th_2018/) were posted on Reddit, Medium and GitHub.
+The monthly format of the Decred Journal is not well suited for timely updates about proposal activity on Politeia. To address this need, @richardred started a weekly [Politeia Digest](https://github.com/RichardRed0x/politeia-digest). It covers all proposals that were added or changed within a week, and provides some analysis. [Issue 1](https://www.reddit.com/r/decred/comments/9qnye8/politeia_digest_issue_1_a_short_weekly_update_on/) and [Issue 2](https://www.reddit.com/r/decred/comments/9sruhn/politeia_digest_2_oct_2330th_2018/) were posted on Reddit, Medium and GitHub.
 
 ## Network
 
@@ -172,7 +172,7 @@ October was an exciting month for Decred, in large part due to the launch of Pol
 
 In addition, multiple blog posts were released to support the Politeia launch, including [@Dustorf's](https://medium.com/decred/politeia-approaching-escape-velocity-30f95f8b2055) and [@richardred's](https://medium.com/decred/on-the-launch-of-decreds-politeia-b305d06d8bda).
 
-Decred was a platinum sponsor at the Texas Bitcoin Conference in Austin on Oct 27-28. A large team converged to deliver some dynamic presentations on governance, Politeia specifically, staking, mining, and many other topics. Videos of the presentations can be viewed [here](https://www.youtube.com/playlist?list=PLaMrpvQ0yJ_x4L3vtUwfZOM6euh3P8-fx).
+Decred was a platinum sponsor at the Texas Bitcoin Conference in Austin on Oct 27-28. A strong mix of presenters converged to deliver some dynamic presentations on governance, Politeia specifically, staking, mining, and many other topics. Videos of the presentations can be viewed [here](https://www.youtube.com/playlist?list=PLaMrpvQ0yJ_x4L3vtUwfZOM6euh3P8-fx).
 
 Much of the remainder of the month focused on vetting PR firms and facilitating proposals on Politeia, which will soon be detailed further in a blog by @Dustorf. Now that a PR firm has been approved (early Nov), work will begin to gain consensus within the community on messaging, and plans will begin on significant website updates and an integrated communications plan for 2019. Much more to share in November.
 
@@ -193,7 +193,7 @@ Attended:
 * [SF Blockchain Week](https://sfblockchainweek.io/) in San Francisco, USA. @lukebp was speaking on "Consensus Systems: DPos vs PoS".
 * [Get FinTech](https://www.meetup.com/FinTech-and-digital-assets/events/248585942/) in Mexico City, Mexico. @elian [reports](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$154163560411642sPiHv:decred.org): "As a resume from both meetups, the Mexican crypto community that attended (60+) the meetups was surprised and happy to know more about Decred (only 10% knew it from before). The cypherpunk ethos of the project, its decentralized and open source nature, the people behind it, its hybrid consensus and how it all started with an airdrop were among the topics people asked about. Also, many were intrigued by the possibilities that Politeia, the DCR fund and its governance mechanism could mean for the future of digital currencies and digital 'states' in an era when trust is being shifted from centralized institutions to community driven projects.". ([photos](https://twitter.com/Decred_MX/status/1055668881237467136), [video](https://twitter.com/Decred_MX/status/1055669327771373568))
 * [Decred Meetup](https://www.facebook.com/events/241045786567334/) in Casablanca, Morocco. @butterfly noted after hosting the event: "It went well, people were very interested. Some of them knew Decred as a cryptocurrency but they didn't know the technology behind it. Through this meetup they learned more about Decred project and got interested in the technology." ([photos](https://twitter.com/in_insaf/status/1056252398476423168), [photos](https://www.facebook.com/permalink.php?story_fbid=1884165438286394&id=1836611206375151))
-* Decred Summit at [Texas Bitcoin Conference](https://texasbitcoinconference.com/) in Austin, USA. This was a huge Decred event and Decred was a platinum sponsor. A total of 9 presentations were given, most of them recorded. The hackathon was canceled due to organization issues, although there were multiple teams interested in working on the issue. New shiny silver jacket made an appearance. ([Decred videos](https://www.youtube.com/playlist?list=PLaMrpvQ0yJ_x4L3vtUwfZOM6euh3P8-fx), [all videos](https://www.youtube.com/playlist?list=PLlLSsIJ2O_cTIaALNXExlEqu3jP6IQyc_), photos: [1](https://twitter.com/ahcastor/status/1056200576206360576), [2](https://twitter.com/odyssey_crypto/status/1056184765181816832), [3](https://twitter.com/cburniske/status/1056228711542988801))
+* Decred Summit at [Texas Bitcoin Conference](https://texasbitcoinconference.com/) in Austin, USA. This was a huge Decred event and Decred was a platinum sponsor. A total of 9 presentations were given, varied in subject and all high quality, most of them recorded. The hackathon was canceled due to organization issues, although there were multiple teams interested in working on the issue. New shiny silver jacket made an appearance. ([Decred videos](https://www.youtube.com/playlist?list=PLaMrpvQ0yJ_x4L3vtUwfZOM6euh3P8-fx), [all videos](https://www.youtube.com/playlist?list=PLlLSsIJ2O_cTIaALNXExlEqu3jP6IQyc_), photos: [1](https://twitter.com/ahcastor/status/1056200576206360576), [2](https://twitter.com/odyssey_crypto/status/1056184765181816832), [3](https://twitter.com/cburniske/status/1056228711542988801))
 
 Upcoming:
 
@@ -281,21 +281,21 @@ Community stats:
 Comm systems news:
 
 * Thanks to @degeri for [detecting](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$153984485932336wcyEb:decred.org) malware posted in #general. Stay vigilant!
-* New [#proposals](https://riot.im/app/#/room/!MIGqWXfLFBwhipPKYL:decred.org) room was created to discuss Politeia proposals. Part of history is already gone in the Slack Void, but everything is stored in Matrix. For the diggers [here](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$154007473834677bxnMv:decred.org) is the start of the logs.
+* New [#proposals](https://riot.im/app/#/room/!MIGqWXfLFBwhipPKYL:decred.org) room was created to discuss Politeia proposals. Part of history is already gone in the Slack Void, but everything is stored in Matrix. For those who want the full history [here](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$154007473834677bxnMv:decred.org) is the start of the logs.
 * Riot [update](https://medium.com/@RiotChat/riot-im-web-0-17-and-ios-0-7-6-smaller-footprint-faster-launch-5ddd18a65abb) reduced memory usage by 70%.
 * Registrations on the forum [are closed](https://github.com/decred/dcrweb/issues/379), the forum will stay up for archival purposes.
 
 Twitter: how Decred and Dash differ merely in [implementation details](https://twitter.com/KyleSamani/status/1046880608255926273) and suffer from plutocracy; on-chain governance and plutocracies [again](https://twitter.com/KyleSamani/status/1047124074386796545); [more](https://twitter.com/RyanSAdams/status/1047129181627265025) bashing of plutocracy; diminishing the power of [committees](https://twitter.com/soonaorlater/status/1052393894153871362); [the point](https://twitter.com/spencernoon/status/1052584861192486922) of on-chain governance is not to create a democracy and give everyone a vote, but to make sure the network is being maintained and upgraded properly; internal vs external funding and [concerns](https://twitter.com/hasufl/status/1052210564938780672) about Decred "team's" holdings.
 
-Reddit: whether Decred will [fork](https://www.reddit.com/r/decred/comments/9kmdn2/will_decred_be_hard_fork_like_sia/) like Sia; [concerns](https://www.reddit.com/r/decred/comments/9kqxlp/few_concerns/) about end of emission and stakeholders making good long term decisions; plans on advanced [multisig](https://www.reddit.com/r/decred/comments/9niddh/does_decred_have_plans_for_supporting_advanced/), Schnorr and MuSig; [privacy](https://www.reddit.com/r/decred/comments/9qgqlm/is_it_possible_to_have_a_private_coin_whos/) vs auditable supply; Wachsman and Ditto proposal [discussion](https://www.reddit.com/r/decred/comments/9rpze2/wachsman_or_ditto_which_proposal_will_you_vote_for/); collecting [questions](https://www.reddit.com/r/decred/comments/9sz2ae/ask_the_infrastructure_guy_community_question/) to people running the infrastructure.
+Reddit: whether Decred will [fork](https://www.reddit.com/r/decred/comments/9kmdn2/will_decred_be_hard_fork_like_sia/) like Sia; [concerns](https://www.reddit.com/r/decred/comments/9kqxlp/few_concerns/) about end of emission and stakeholders making good long term decisions; plans on advanced [multisig](https://www.reddit.com/r/decred/comments/9niddh/does_decred_have_plans_for_supporting_advanced/), Schnorr and MuSig; [privacy](https://www.reddit.com/r/decred/comments/9qgqlm/is_it_possible_to_have_a_private_coin_whos/) vs auditable supply; Wachsman and Ditto proposal [discussion](https://www.reddit.com/r/decred/comments/9rpze2/wachsman_or_ditto_which_proposal_will_you_vote_for/); collecting [questions](https://www.reddit.com/r/decred/comments/9sz2ae/ask_the_infrastructure_guy_community_question/) to ask of people running the infrastructure.
 
-Chats: [choosing](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$153842845217959NFCXu:decred.org) a VSP; creating and signing transactions [offline](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$153842975517974wduOy:decred.org); [differences](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$153844796918108yZpuM:decred.org) from Dash; [ideas](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$153852369718855paWRH:decred.org) for better dev infrastructure, automated setup of an entire dev environment; Decred vs Dash [approval threshold](https://matrix.to/#/!VFRvyndKpzcLrVslQD:decred.org/$153852668618869mRjKZ:decred.org), minimum quorum, attempts to short circuit open source ethos; proposal [approval threshold](https://matrix.to/#/!tIDEIWechmqCLjPiui:decred.org/$153859491119463TKGiU:decred.org) and minimum quorum; [translations](https://matrix.to/#/!tfqymymiNgzSUJTHqS:decred.org/$153866711120129gFEWS:decred.org) of documentation; [history](https://matrix.to/#/!wSdymYrEpBhsWlDJuk:decred.org/$153864618819929CQaHw:decred.org) of ticket splitting in decredbrasil VSP; [idea](https://matrix.to/#/!tIDEIWechmqCLjPiui:decred.org/$153867874820458xeJec:decred.org) to reward Pi voting from the Treasury; [vote delegation](https://matrix.to/#/!tIDEIWechmqCLjPiui:decred.org/$153868485920740QqCCr:decred.org) and privacy of Pi voting; [marketing strategy](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$153868959820853zYfqe:decred.org) and target audience for Decred, advertising not connecting us with type of users we want, stories from Decred converts; [summary](https://matrix.to/#/!tIDEIWechmqCLjPiui:decred.org/$153874797221213mSnzr:decred.org) of the debate around Vlad's Blockchain Governance 101, ethical dilemma whethere to protect people from theft, using term 'autonomous'; [whether](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$153878342822432RgZay:decred.org) Chinese miners could collude to control Decred, and whether miners in general deserve the animosity they commonly get, a case that ASIC miners know and believe in the networks they mine unlike GPU miners; [terminology](https://matrix.to/#/!lbzTjhzNbIaDbuAxkS:decred.org/$153874655321155rYFGA:decred.org): dev subsidy, network fund, treasury; loss of [diversity](https://matrix.to/#/!lbzTjhzNbIaDbuAxkS:decred.org/$153892770323027pNBOh:decred.org) in the community as a result of chain fork; [quadratic voting](https://matrix.to/#/!tIDEIWechmqCLjPiui:decred.org/$153887144022897dgQOf:decred.org), passionate minority forcing rules on the majority; [gaming](https://matrix.to/#/!tIDEIWechmqCLjPiui:decred.org/$153927425525868IruoT:decred.org) Pi snapshot voting system; [idea](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$153918965425238aUYAa:decred.org) to use BitConnect meme in Decred video; VSP [centralization](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$153950034527053SFNXj:decred.org) concerns, 1-click VPS setup for solo voting; solo voting using [Raspberry Pi 3](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$153953096327147HmyMx:decred.org), latency and disk speed; handling [translations](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$153948439827046snYzK:decred.org); [liquid democracy](https://matrix.to/#/!tIDEIWechmqCLjPiui:decred.org/$153954602627296ibvkE:decred.org), importance of direct voting, possible countermeasures to VSPs playing games; [guidelines](https://matrix.to/#/!tfqymymiNgzSUJTHqS:decred.org/$153997649334019oJBgN:decred.org) for creating proposal; ASIC [flexibility](https://matrix.to/#/!NNzHoaSdnsbZDQOXJr:decred.org/$153956941127373jtLMI:decred.org) vs hashrate; optimal hardware for [voting wallets](https://matrix.to/#/!wSdymYrEpBhsWlDJuk:decred.org/$153967954229301OEZco:decred.org); [misbehaving admins](https://matrix.to/#/!lbzTjhzNbIaDbuAxkS:decred.org/$153971553330341sUOMq:decred.org) are not such a big problem with transparent censorship; [mandatory email](https://matrix.to/#/!VFRvyndKpzcLrVslQD:decred.org/$153972735630609elzTp:decred.org) for Pi, Matrix integration; [mesh networks](https://matrix.to/#/!NKtIRqGOEGaZvSQkKl:decred.org/$153975642830743UMGBJ:decred.org), goTenna, LN; [separate address](https://matrix.to/#/!tIDEIWechmqCLjPiui:decred.org/$153986758232487JVCZi:decred.org) for Pi voting, delegation of sovereignty; why Bitcoin Core won't create a [spec](https://matrix.to/#/!tIDEIWechmqCLjPiui:decred.org/$153989568933092tBMyV:decred.org) for Bitcoin protocol; multi-day chat on [non-javascript](https://matrix.to/#/!LmKzrmxJIXNHNiEmIh:decred.org/$153996808633786coBDQ:decred.org) environments; stakeholders can't make good [decisions](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$153997031533828Zglen:decred.org), skin in the game; downsides of using ['autonomous'](https://matrix.to/#/!tIDEIWechmqCLjPiui:decred.org/$153994802233331ZeCqV:decred.org) in relation to Decred's model and possible replacement; [funding](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$153999901734257JISpG:decred.org) of core development, contractor independence; [opinions](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$154015850835480YVWfd:decred.org) on rich list, concerns about wealth centralization; [ways](https://matrix.to/#/!VFRvyndKpzcLrVslQD:decred.org/$154009032134975sckCK:decred.org) to rank comments on Pi; [defunding](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$154013858535337uwJhD:decred.org) a proposal; fees to prevent [spam](https://matrix.to/#/!tIDEIWechmqCLjPiui:decred.org/$154018142235520cuekK:decred.org) on Pi, Monero experience; [liaisons](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$154024432236136yXour:decred.org) for proposals vouching for professional services; [paying in USD](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$154024869536185GPjrF:decred.org) would set a bad precedent for the Treasury and lead to centralization; [more press](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$1540324474112496lXVEe:matrix.org) from Binance listing than from Politeia release, short-term vision; bridging [challenges](https://matrix.to/#/!VFRvyndKpzcLrVslQD:decred.org/$154032931237477PyMSA:decred.org), Matrix as a hub; [voter fatigue](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$154040105938567GwEyd:decred.org); [people committed](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$154040815238805YjNtU:decred.org) for the proposal, watching for staff changes; [ethics](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$154041774339075mDBxq:decred.org) of attacking smaller PoW coins, Decred was nearly impossible to 51% attack from the start; [how](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$154043923339333cZxhY:decred.org) to protect from sending to wrong address, how the recipient can ack the transfer; [why](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$1540504703107RhgLT:decred.org) wasn't a PR company hired in the past; sidechains vs LN as a [way to scale](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$1540581140920mIeCx:decred.org), more opportunities when base layer can change; [organic growth](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$15406049691451KndKt:decred.org) of Bitcoin and VC money; using Git to massively replicate [impactful writings](https://matrix.to/#/!lbzTjhzNbIaDbuAxkS:decred.org/$15409403034615pjxpB:decred.org); whether DCR locked in tickets is a [security advantage](https://matrix.to/#/!lbzTjhzNbIaDbuAxkS:decred.org/$15409448374658jRaoW:decred.org) in case of theft; Politeia launch [issues](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$15409810504896mTeTG:decred.org), becoming an admin, what if admins delay the vote to buy tickets + solutions, not adding rules prematurely.
+Chats: [choosing](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$153842845217959NFCXu:decred.org) a VSP; creating and signing transactions [offline](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$153842975517974wduOy:decred.org); [differences](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$153844796918108yZpuM:decred.org) from Dash; [ideas](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$153852369718855paWRH:decred.org) for better dev infrastructure, automated setup of an entire dev environment; Decred vs Dash [approval threshold](https://matrix.to/#/!VFRvyndKpzcLrVslQD:decred.org/$153852668618869mRjKZ:decred.org), minimum quorum, attempts to short circuit open source ethos; proposal [approval threshold](https://matrix.to/#/!tIDEIWechmqCLjPiui:decred.org/$153859491119463TKGiU:decred.org) and minimum quorum; [translations](https://matrix.to/#/!tfqymymiNgzSUJTHqS:decred.org/$153866711120129gFEWS:decred.org) of documentation; [history](https://matrix.to/#/!wSdymYrEpBhsWlDJuk:decred.org/$153864618819929CQaHw:decred.org) of ticket splitting in decredbrasil VSP; [idea](https://matrix.to/#/!tIDEIWechmqCLjPiui:decred.org/$153867874820458xeJec:decred.org) to reward Pi voting from the Treasury; [vote delegation](https://matrix.to/#/!tIDEIWechmqCLjPiui:decred.org/$153868485920740QqCCr:decred.org) and privacy of Pi voting; [marketing strategy](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$153868959820853zYfqe:decred.org) and target audience for Decred, advertising not connecting us with type of users we want, stories from Decred converts; [summary](https://matrix.to/#/!tIDEIWechmqCLjPiui:decred.org/$153874797221213mSnzr:decred.org) of the debate around Vlad's Blockchain Governance 101, ethical dilemma whether to protect people from theft, using term 'autonomous'; [whether](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$153878342822432RgZay:decred.org) Chinese miners could collude to control Decred, and whether miners in general deserve the animosity they commonly get; [terminology](https://matrix.to/#/!lbzTjhzNbIaDbuAxkS:decred.org/$153874655321155rYFGA:decred.org): dev subsidy, network fund, treasury; loss of [diversity](https://matrix.to/#/!lbzTjhzNbIaDbuAxkS:decred.org/$153892770323027pNBOh:decred.org) in the community as a result of chain fork; [quadratic voting](https://matrix.to/#/!tIDEIWechmqCLjPiui:decred.org/$153887144022897dgQOf:decred.org), passionate minority forcing rules on the majority; [gaming](https://matrix.to/#/!tIDEIWechmqCLjPiui:decred.org/$153927425525868IruoT:decred.org) Pi snapshot voting system; [idea](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$153918965425238aUYAa:decred.org) to use BitConnect meme in Decred video; VSP [centralization](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$153950034527053SFNXj:decred.org) concerns, 1-click VPS setup for solo voting; solo voting using [Raspberry Pi 3](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$153953096327147HmyMx:decred.org), latency and disk speed; handling [translations](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$153948439827046snYzK:decred.org); [liquid democracy](https://matrix.to/#/!tIDEIWechmqCLjPiui:decred.org/$153954602627296ibvkE:decred.org), importance of direct voting, possible countermeasures to VSPs playing games; [guidelines](https://matrix.to/#/!tfqymymiNgzSUJTHqS:decred.org/$153997649334019oJBgN:decred.org) for creating proposal; ASIC [flexibility](https://matrix.to/#/!NNzHoaSdnsbZDQOXJr:decred.org/$153956941127373jtLMI:decred.org) vs hashrate; optimal hardware for [voting wallets](https://matrix.to/#/!wSdymYrEpBhsWlDJuk:decred.org/$153967954229301OEZco:decred.org); [misbehaving admins](https://matrix.to/#/!lbzTjhzNbIaDbuAxkS:decred.org/$153971553330341sUOMq:decred.org) are not such a big problem with transparent censorship; [mandatory email](https://matrix.to/#/!VFRvyndKpzcLrVslQD:decred.org/$153972735630609elzTp:decred.org) for Pi, Matrix integration; [mesh networks](https://matrix.to/#/!NKtIRqGOEGaZvSQkKl:decred.org/$153975642830743UMGBJ:decred.org), goTenna, LN; [separate address](https://matrix.to/#/!tIDEIWechmqCLjPiui:decred.org/$153986758232487JVCZi:decred.org) for Pi voting, delegation of sovereignty; why Bitcoin Core won't create a [spec](https://matrix.to/#/!tIDEIWechmqCLjPiui:decred.org/$153989568933092tBMyV:decred.org) for Bitcoin protocol; multi-day chat on [non-javascript](https://matrix.to/#/!LmKzrmxJIXNHNiEmIh:decred.org/$153996808633786coBDQ:decred.org) environments; stakeholders can't make good [decisions](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$153997031533828Zglen:decred.org), skin in the game; downsides of using ['autonomous'](https://matrix.to/#/!tIDEIWechmqCLjPiui:decred.org/$153994802233331ZeCqV:decred.org) in relation to Decred's model and possible replacement; [funding](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$153999901734257JISpG:decred.org) of core development, contractor independence; [opinions](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$154015850835480YVWfd:decred.org) on rich list, concerns about wealth centralization; [ways](https://matrix.to/#/!VFRvyndKpzcLrVslQD:decred.org/$154009032134975sckCK:decred.org) to rank comments on Pi; [defunding](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$154013858535337uwJhD:decred.org) a proposal; fees to prevent [spam](https://matrix.to/#/!tIDEIWechmqCLjPiui:decred.org/$154018142235520cuekK:decred.org) on Pi, Monero experience; [liaisons](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$154024432236136yXour:decred.org) for proposals vouching for professional services; [paying in USD](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$154024869536185GPjrF:decred.org) would set a bad precedent for the Treasury and lead to centralization; [more press](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$1540324474112496lXVEe:matrix.org) from Binance listing than from Politeia release, short-term vision; bridging [challenges](https://matrix.to/#/!VFRvyndKpzcLrVslQD:decred.org/$154032931237477PyMSA:decred.org), Matrix as a hub; [voter fatigue](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$154040105938567GwEyd:decred.org); [people committed](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$154040815238805YjNtU:decred.org) for the proposal, watching for staff changes; [ethics](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$154041774339075mDBxq:decred.org) of attacking smaller PoW coins, Decred was nearly impossible to 51% attack from the start; [how](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$154043923339333cZxhY:decred.org) to protect from sending to wrong address, how the recipient can acknowledge the transfer; [why](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$1540504703107RhgLT:decred.org) wasn't a PR company hired in the past; sidechains vs LN as a [way to scale](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$1540581140920mIeCx:decred.org), more opportunities when base layer can change; [organic growth](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$15406049691451KndKt:decred.org) of Bitcoin and VC money; using Git to massively replicate [impactful writings](https://matrix.to/#/!lbzTjhzNbIaDbuAxkS:decred.org/$15409403034615pjxpB:decred.org); whether DCR locked in tickets is a [security advantage](https://matrix.to/#/!lbzTjhzNbIaDbuAxkS:decred.org/$15409448374658jRaoW:decred.org) in case of theft; Politeia launch [issues](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$15409810504896mTeTG:decred.org), becoming an admin, what if admins delay the vote to buy tickets + solutions, not adding rules prematurely.
 
 > I've visited a lot of other communities and IMO the Decred community seems quite strong. I haven't found many where you have such access to the developers and where you can watch the changes being made on a daily basis. (@sumiflow in [#trading](https://matrix.to/#/!zxBsqZRxjbQoLqJRwe:decred.org/$153979318831397xufQV:decred.org))
 
 ## Markets
 
-DCR was trading in the range of USDT 35-56 / BTC 0.0058-0.0085. The USDT base is used instead of the usual USD becase as October has shown, the two can go out of sync in dramatic ways.
+DCR was trading in the range of USDT 35-56 / BTC 0.0058-0.0085. The USDT base is used instead of the usual USD because as October has shown, the two can go out of sync in dramatic ways.
 
 On Oct 15 a huge dump of USDT sent it below $0.8 on some exchanges and caused a corresponding spike of BTC up to USDT 7700. On Poloniex, panic sells of USDT reached USDC 0.51, and on Bittrex it went down to $0.87. The price held below $0.9 for around 12 hours, recovered to $0.97 by Oct 19 and to $0.98 by Oct 27. Media coverage is [here](https://www.bloomberg.com/news/articles/2018-10-14/why-crypto-traders-are-so-worried-about-tether-quicktake-q-a) and [here](https://cointelegraph.com/news/tether-tanks-as-traders-lose-trust-other-cryptos-see-price-boost).
 
@@ -317,7 +317,7 @@ Recent [issues](https://hackernoon.com/whats-going-on-with-cardano-3f2996841b21)
 
 BitMEX group posted an [article](https://blog.bitmex.com/bitcoin-cores-competition/) on Bitcoin implementations which argues that Bitcoin Core software repository has less influence than people seem to think.
 
-ShapeShift, a service that pioneered accountless exchanges where one didn't need to compromise his privacy or worry about securing a centralized account, is [adding](https://thenextweb.com/hardfork/2018/09/05/shapeshift-cryptocurrency-exchange-kyc/) mandatory accounts and KYC.
+ShapeShift, a service that pioneered accountless exchanges where one didn't need to compromise privacy or worry about securing a centralized account, is [adding](https://thenextweb.com/hardfork/2018/09/05/shapeshift-cryptocurrency-exchange-kyc/) mandatory accounts and KYC.
 
 Exchange news: Poloniex [removes](https://poloniex.com/press-releases/2018.10.03-Poloniex-To-Remove-Margin-And-Lending-Products-For-US-Based-Customers/) margin and lending for US customers and continues to delist assets, Bittrex [keeps adding](https://twitter.com/BittrexExchange/status/1055187262051360768) USD pairs, OKEx [lists](https://cointelegraph.com/news/third-top-cryptocurrency-exchange-okex-lists-four-stablecoins-at-once) 4 stablecoins at once, Coinbase [added](https://blog.coinbase.com/coinbase-and-circle-announce-the-launch-of-usdc-a-digital-dollar-2cd6548d237) USDC trading.
 
