Feedback on Governance from richardred

--- a/journal/201810.md
+++ b/journal/201810.md
@@ -63,7 +63,7 @@ Another warm welcome to new people contributing for the first time: [SergeyMikhl
 
 ## Governance
 
-We had a total of 7 proposals on Politeia in October. The statuses as of Nov 9 to avoid confusion.
+We had a total of 8 proposals on Politeia between Oct 1 and Nov 9 (_covering the beginning of Nov to avoid confusion with proposal statuses_).
 
 1\. [Decred Open Source Research](https://proposals.decred.org/proposals/c68bb790ba0843980bb9695de4628995e75e0d1f36c992951db49eca7b3b4bcd) submitted by @richardred on Oct 16.
 
@@ -109,9 +109,15 @@ Easyrabbit has already listed DCR and is offering a "premium listing" for 30 DCR
 
 Status: Author has not yet authorized the start of voting.
 
-A draft of bug bounty proposal was posted [on Reddit](https://www.reddit.com/r/decred/comments/9sri0b/bug_bounty_politeia_funding_proposal/) for discussion.
+8\. [Sweepstakes](https://proposals.decred.org/proposals/517ac6598031e17e3e301d41e73a62e4a7c10ee6dafb3dc65fbdd32f550971b0) submitted by geraldoneto on Nov 5.
 
-The monthly format of the Decred Journal is not well suited for timely updates about proposal activity on Politeia. To address this need, @richardred started a weekly [Politeia Digest](https://github.com/RichardRed0x/politeia-digest). It covers all proposals that were added or changed within a week, and provides some analysis. [Issue 1](https://www.reddit.com/r/decred/comments/9qnye8/politeia_digest_issue_1_a_short_weekly_update_on/) and [Issue 2](https://www.reddit.com/r/decred/comments/9sruhn/politeia_digest_2_oct_2330th_2018/) were posted on Reddit, Medium and GitHub.
+This proposal describes a raffle system and some example configurations, but does not propose a specific plan for building it.
+
+Status: Author has not yet authorized the start of voting.
+
+Two drafts of bug bounty proposals were posted for discussion: one [by u/rustyshacklefordton](https://www.reddit.com/r/decred/comments/9sri0b/bug_bounty_politeia_funding_proposal/) and anoter [by @degeri](https://www.reddit.com/r/decred/comments/9ubqmk/decred_bug_bounty_proposal/).
+
+The monthly format of the Decred Journal is not well suited for timely updates about proposal activity on Politeia. To address this need, @richardred started a weekly [Politeia Digest](https://github.com/RichardRed0x/politeia-digest). It covers all proposals that were added or changed within a week, and provides some analysis. [First](https://www.reddit.com/r/decred/comments/9qnye8/politeia_digest_issue_1_a_short_weekly_update_on/), [second](https://www.reddit.com/r/decred/comments/9sruhn/politeia_digest_2_oct_2330th_2018/) and [third](https://www.reddit.com/r/decred/comments/9v3ypu/politeia_digest_issue_3_oct_31nov_6_2018/) issues were posted on Reddit, Medium and GitHub.
 
 ## Network
 
